
cc_library(
	name = "fusion",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_tuple//:tuple",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_functional//:functional"
	],
)
