load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/fusion/*.hpp",
    "include/boost/fusion/adapted/*.hpp",
    "include/boost/fusion/adapted/adt/*.hpp",
    "include/boost/fusion/adapted/array/*.hpp",
    "include/boost/fusion/adapted/boost_array/*.hpp",
    "include/boost/fusion/adapted/boost_tuple/*.hpp",
    "include/boost/fusion/adapted/mpl/*.hpp",
    "include/boost/fusion/adapted/std_array/*.hpp",
    "include/boost/fusion/adapted/std_tuple/*.hpp",
    "include/boost/fusion/adapted/struct/*.hpp",
    "include/boost/fusion/algorithm/*.hpp",
    "include/boost/fusion/algorithm/auxiliary/*.hpp",
    "include/boost/fusion/algorithm/iteration/*.hpp",
    "include/boost/fusion/algorithm/query/*.hpp",
    "include/boost/fusion/algorithm/transformation/*.hpp",
    "include/boost/fusion/container/*.hpp",
    "include/boost/fusion/container/deque/*.hpp",
    "include/boost/fusion/container/generation/*.hpp",
    "include/boost/fusion/container/list/*.hpp",
    "include/boost/fusion/container/map/*.hpp",
    "include/boost/fusion/container/set/*.hpp",
    "include/boost/fusion/container/vector/*.hpp",
    "include/boost/fusion/functional/*.hpp",
    "include/boost/fusion/functional/adapter/*.hpp",
    "include/boost/fusion/functional/generation/*.hpp",
    "include/boost/fusion/functional/invocation/*.hpp",
    "include/boost/fusion/include/*.hpp",
    "include/boost/fusion/iterator/*.hpp",
    "include/boost/fusion/iterator/mpl/*.hpp",
    "include/boost/fusion/mpl/*.hpp",
    "include/boost/fusion/sequence/*.hpp",
    "include/boost/fusion/sequence/comparison/*.hpp",
    "include/boost/fusion/sequence/intrinsic/*.hpp",
    "include/boost/fusion/sequence/io/*.hpp",
    "include/boost/fusion/support/*.hpp",
    "include/boost/fusion/tuple/*.hpp",
    "include/boost/fusion/view/*.hpp",
    "include/boost/fusion/view/filter_view/*.hpp",
    "include/boost/fusion/view/flatten_view/*.hpp",
    "include/boost/fusion/view/iterator_range/*.hpp",
    "include/boost/fusion/view/joint_view/*.hpp",
    "include/boost/fusion/view/nview/*.hpp",
    "include/boost/fusion/view/repetitive_view/*.hpp",
    "include/boost/fusion/view/reverse_view/*.hpp",
    "include/boost/fusion/view/single_view/*.hpp",
    "include/boost/fusion/view/transform_view/*.hpp",
    "include/boost/fusion/view/zip_view/*.hpp",
]

cc_library(
    name = "fusion_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "fusion",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":fusion_internal"],
)
